--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # -----------------------------------------------------------------------------
 
 github_username: alexw16 # your GitHub user name
-gitlab_username: @alexpywu # your GitLab user name
+gitlab_username: alexpywu # your GitLab user name
 twitter_username: # your Twitter handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: # your LinkedIn user name
