--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -3,95 +3,47 @@
   contents:
     - name: Full Name
       value: Alexander P. Wu
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+    - title: PhD in Computational and Systems Biology
+      institution: Massachusetts Institute of Technology
+      year: 2023
+    - title: SM in Computational Biology and Quantitative Genetics 
+      institution: Harvard University 
+      year: 2018
+    - title: BS in Operations Research, Minor in Applied Mathematics 
+      institution: Columbia University 
+      year: 2016
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Graduate Research Assistant 
+      institution: <a href="https://www.csail.mit.edu">Computer Science and Artificial Intellience Laboratory, MIT</a>
+      year: Sept 2018-May 2023
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Graph machine learning and causal inference for studying single-cell gene regulatory dynamics 
+        - Enhancer-gene interactions for interpreting effects of disease variants on gene dysregulation
+        - TF-gene interactions using RNA velocity graphs to analyze temporal regulation of gene expression
+        - Single-cell multi-omic profiling of CRISPR perturbations to chromatin remodelers in cancer
+        - Bayesian methods for reconstructing gene regulatory networks in small sample size settings
+
+    - title: Computational Sciences Intern
+      institution: <a href="https://primemedicine.com">Prime Medicine</a> 
+      year: Jan 2023-June 2023
       description:
-        - Description 1.
-        - Description 2.
+        - Machine learning for prime editing
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Machine Learning Research Intern
+      institution: <a href="https://cortex.twitter.com/en.html">Twitter Cortex</a> 
+      year: Jun 2022-Oct 2022
       description:
+        - Causal graph machine learning for improving generalizability & interpretability of graph attention
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - title: Deep Learning Intern
+      institution: <a href="https://www.quantum-si.com">Quantum-Si</a> 
+      year: Jun 2018-Aug 2018
+      description:
+        - Machine learning on biological knowledge graphs for protein function prediction
