added google site verification

--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ contact_note: # >
 google_analytics:  # your Google Analytics measurement ID (format: G-XXXXXXXXXX)
 panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 
-google_site_verification:  # your google-site-verification ID (Google Search Console)
+google_site_verification: QfvgS-gn3CdNg90Jyje8ByFb1v0g3CKSK63vaxQprKo  # your google-site-verification ID (Google Search Console)
 bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 
 # -----------------------------------------------------------------------------
